Parse cmake output for project directory and use it in OutputView

Summary:
Currently OutputFilteringStrategies makes the assumption that the cmake build directory is always one level underneath the project directory. If that assumption isn't met, clicking on a cmake error line does not open the corresponding file (see bug https://bugs.kde.org/show_bug.cgi?id=321982).

This patch adds another filter that reads the absolute path to the project directory from the cmake output. The filter uses application type cd to behave like the other filters that change the build directory.

Reviewers: kfunk, volden

Reviewed By: volden

Subscribers: volden, kfunk, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D7040

BUG: 321982