kdevplatform/outputview/outputfilteringstrategies.cpp
@@ -182,6 +182,9 @@ FilteredItem CompilerFilterStrategy::actionInLine(const QString& line)
         ActionFormat( QStringLiteral("cmake"),
                       QStringLiteral("(-- Configuring (done|incomplete)|-- Found|-- Adding|-- Enabling)"), -1 ),
         ActionFormat( 1, QStringLiteral("-- Installing (.*)") ),
+        //cmake - cd - filter for project directory
+        ActionFormat( QStringLiteral("cd"),
+                      QStringLiteral("(?:)cmake (?:.*?) (/.*$)"), 1),
         //libtool install
         ActionFormat( {},
                       QStringLiteral("/(?:bin/sh\\s.*mkinstalldirs).*\\s([^\\s;]+)"), 1 ),
